--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -91,6 +91,9 @@
   .checkout__form {
     @apply bg-stone-900 p-6 rounded-lg space-y-4;
   }
+  .text_gradient {
+    @apply text-transparent bg-clip-text bg-gradient-to-r from-purple-800 via-cyan-500 to-cyan-500;
+  }
 }
 
 @layer components {
